Testado e homologado para a versão do Ubuntu Server 16.04.6 LTS x64
Testado e homologado para a versão do Ubuntu Server 16.04.7 LTS x64
Kernel >= 4.4.x

==================================== ATUALIZAÇÕES DO OCS INVENTORY ===========================================
06/12/2020 - Atualização do arquivo de configuração: z-ocsinventory-server.conf com o Bloco do SOAP.

04/12/2020 - Criação dos Diretórios: mibs (MIB personalizadas convertidas para TXT), mibs-privadas (MIB privadas
de fornecedores de hardware de rede), patch (arquivos com correções do OCS Inventory Server ou Agent), pm (arquivos
de MIBs personalizadas para o SNMP Scan), xml (arquivos de XML personalizadas para o inventário).

30/11/2020 - Atualização do arquivo 00-parametros.sh com o acréscimo das variáveis de MIBs personalizadas e 
correção de BUGs gerais nos scripts
30/11/2020 - Atualização do arquivo 01-lamp.sh acréscimo de dependências do SNMP e automatização da instalação 
das dependências do Perl para não solicitar mais interação com usuário, acréscimo da verificação das portas do 
Apache2 e MySQL no final do script
30/11/2020 - Atualização do arquivo 03-ocs_server.sh melhoria na documentação de ajuda na instalação do OCS 
Inventory Server, atualização de todos os arquivos de configuração do OCS Inventory para a versão 2.7.
30/11/2020 - Atualização do arquivo 04-pos_ocs_server.sh com o acréscimo da configuração do Logroted referente 
aos Logs do OCS Inventory Server, correção das falhas do SNMP e criação dos Links simbólicos, copia das MIBs 
personalizadas para o diretório de MIBs do Ubuntu
30/11/2020 - Atualização do arquivo 05-ocs_agent.sh, acréscimo das configurações do arquivo de Módulos, aplicando
o PATCH de correção do arquivo do Agent (Deb.pm) v2.6.1, acréscimo das opções --debug e --info no arquivo de 
configuração do ocsinventory-agent
30/11/2020 - Atualização do arquivo 06-glpi.sh com a automatização da instalação do APCU-BC-BETA