@@ -4,11 +4,135 @@
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
 # Data de criação: 21/11/2020
-# Data de atualização: 21/11/2020
-# Versão: 0.1
+# Data de atualização: 06/12/2020
+# Versão: 0.2
 # Testado e homologado para a versão do Ubuntu Server 16.04 LTS x64
 # Kernel >= 4.4.x
 #
-# Arquivo de configuração do SNMP para utilizar as MIBs genéricas baixadas pelo comando: download-mibs
-# Localização das MIBs do SNMP: /usr/share/mibs
+# Arquivo de configuração do Manager SNMP Cliente e Ferramentas para oferecer suporte as MIBs genéricas baixadas 
+# pelo comando: download-mibs e suporte as MIBs Privadas localizadas em: /usr/share/mibs, /var/lib/mibs/ietf/ e
+# /var/lib/mibs/iana/
+#
+# Configuração da Porta Padrão do SNMP
+defaultport 161
+#
+# Configuração da Versão Padrão do SNMP
+defversion 2c
+#
+# Configuração da Comunidade Padrão do SNMP nas versões: v1, v2 e v2c
+defcommunity public
+#
+# Exibir mensagens de erros em MIBs carregadas (1 | sim | verdadeiro | 0 | não | falso)
+showmiberrors 0
+#
+# Exibir mensagens de avisos em MIBs carregadas (1 | sim | verdadeiro | 0 | não | falso)
+mibwarninglevel 0
+#
+# Exibir mensagens de comentários em MIBs carregadas (1 | sim | verdadeiro | 0 | não | falso)
+strictcommentterm 0
+#
+# Exibir mensagens de sublinhado em MIBs carregadas (1 | sim | verdadeiro | 0 | não | falso)
+miballowunderline 1
+#
+# Atualizar MIBs antigas por outras atualizadas (1 | sim | verdadeiro | 0 | não | falso)
+mibreplacewithlatest 1
+#
+# Especificação das listas de MIBs a serem pesquisadas e carregadas
 mibs +ALL
+#
+# Lista dos diretórios de MIBs personalizadas a serem acrescenta no Agente do SNMP
+mibdirs +/usr/share/snmp/mibs/ietf/
+mibdirs +/usr/share/snmp/mibs/iana/
+mibdirs +/usr/share/snmp/mibs/3com
+mibdirs +/usr/share/snmp/mibs/adtran
+mibdirs +/usr/share/snmp/mibs/aerohive
+mibdirs +/usr/share/snmp/mibs/alcatel
+mibdirs +/usr/share/snmp/mibs/allied
+mibdirs +/usr/share/snmp/mibs/apc
+mibdirs +/usr/share/snmp/mibs/arista
+mibdirs +/usr/share/snmp/mibs/aruba
+mibdirs +/usr/share/snmp/mibs/asante
+mibdirs +/usr/share/snmp/mibs/avaya
+mibdirs +/usr/share/snmp/mibs/bluecoat
+mibdirs +/usr/share/snmp/mibs/bluesocket
+mibdirs +/usr/share/snmp/mibs/brother
+mibdirs +/usr/share/snmp/mibs/cabletron
+mibdirs +/usr/share/snmp/mibs/ceragon
+mibdirs +/usr/share/snmp/mibs/cern
+mibdirs +/usr/share/snmp/mibs/checkpoint
+mibdirs +/usr/share/snmp/mibs/ciena
+mibdirs +/usr/share/snmp/mibs/cisco
+mibdirs +/usr/share/snmp/mibs/ciscosb
+mibdirs +/usr/share/snmp/mibs/citrix
+mibdirs +/usr/share/snmp/mibs/clavister
+mibdirs +/usr/share/snmp/mibs/cloudgenix
+mibdirs +/usr/share/snmp/mibs/colubris
+mibdirs +/usr/share/snmp/mibs/cyclades
+mibdirs +/usr/share/snmp/mibs/dell
+mibdirs +/usr/share/snmp/mibs/d-link
+mibdirs +/usr/share/snmp/mibs/eaton
+mibdirs +/usr/share/snmp/mibs/efficientip
+mibdirs +/usr/share/snmp/mibs/enterasys
+mibdirs +/usr/share/snmp/mibs/etherwan
+mibdirs +/usr/share/snmp/mibs/exinda
+mibdirs +/usr/share/snmp/mibs/extreme
+mibdirs +/usr/share/snmp/mibs/extricom
+mibdirs +/usr/share/snmp/mibs/f5
+mibdirs +/usr/share/snmp/mibs/force10
+mibdirs +/usr/share/snmp/mibs/fortinet
+mibdirs +/usr/share/snmp/mibs/foundry
+mibdirs +/usr/share/snmp/mibs/gigamon
+mibdirs +/usr/share/snmp/mibs/h3c
+mibdirs +/usr/share/snmp/mibs/hirschmann
+mibdirs +/usr/share/snmp/mibs/hp
+mibdirs +/usr/share/snmp/mibs/hpe
+mibdirs +/usr/share/snmp/mibs/huawei
+mibdirs +/usr/share/snmp/mibs/ibm
+mibdirs +/usr/share/snmp/mibs/juniper
+mibdirs +/usr/share/snmp/mibs/lancom
+mibdirs +/usr/share/snmp/mibs/lantronix
+mibdirs +/usr/share/snmp/mibs/lenovo
+mibdirs +/usr/share/snmp/mibs/liebert
+mibdirs +/usr/share/snmp/mibs/mediant
+mibdirs +/usr/share/snmp/mibs/mellanox
+mibdirs +/usr/share/snmp/mibs/meraki
+mibdirs +/usr/share/snmp/mibs/meru
+mibdirs +/usr/share/snmp/mibs/microsens
+mibdirs +/usr/share/snmp/mibs/mikrotik
+mibdirs +/usr/share/snmp/mibs/moser-baer
+mibdirs +/usr/share/snmp/mibs/motorola
+mibdirs +/usr/share/snmp/mibs/moxa
+mibdirs +/usr/share/snmp/mibs/nateks
+mibdirs +/usr/share/snmp/mibs/netapp
+mibdirs +/usr/share/snmp/mibs/netgear
+mibdirs +/usr/share/snmp/mibs/netonix
+mibdirs +/usr/share/snmp/mibs/netscreen
+mibdirs +/usr/share/snmp/mibs/net-snmp
+mibdirs +/usr/share/snmp/mibs/nexans
+mibdirs +/usr/share/snmp/mibs/nortel
+mibdirs +/usr/share/snmp/mibs/northerndesign
+mibdirs +/usr/share/snmp/mibs/oneaccess
+mibdirs +/usr/share/snmp/mibs/opengear
+mibdirs +/usr/share/snmp/mibs/packetfront
+mibdirs +/usr/share/snmp/mibs/paloalto
+mibdirs +/usr/share/snmp/mibs/pica8
+mibdirs +/usr/share/snmp/mibs/pulsesecure-gateway
+mibdirs +/usr/share/snmp/mibs/rad
+mibdirs +/usr/share/snmp/mibs/redlionram
+mibdirs +/usr/share/snmp/mibs/rfc
+mibdirs +/usr/share/snmp/mibs/rittal
+mibdirs +/usr/share/snmp/mibs/riverbed
+mibdirs +/usr/share/snmp/mibs/ruckus
+mibdirs +/usr/share/snmp/mibs/schleifenbauer
+mibdirs +/usr/share/snmp/mibs/sentry
+mibdirs +/usr/share/snmp/mibs/siemens
+mibdirs +/usr/share/snmp/mibs/sixnet
+mibdirs +/usr/share/snmp/mibs/sonicwall
+mibdirs +/usr/share/snmp/mibs/teleste
+mibdirs +/usr/share/snmp/mibs/teltonika
+mibdirs +/usr/share/snmp/mibs/tplink
+mibdirs +/usr/share/snmp/mibs/trapeze
+mibdirs +/usr/share/snmp/mibs/ubiquiti
+mibdirs +/usr/share/snmp/mibs/vmware
+mibdirs +/usr/share/snmp/mibs/wipipe
+mibdirs +/usr/share/snmp/mibs/xirrus
