@@ -1,0 +1,73 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Data de criação: 06/12/2020
+# Data de atualização: 06/12/2020
+# Versão: 0.1
+# Testado e homologado para a versão do Ubuntu Server 16.04 LTS x64
+# Kernel >= 4.4.x
+#
+# Arquivo de configuração do Agente do SNMP (Servidor) utilizando o Daemon snmpd.service
+#
+# Listen for connections on all interfaces (both IPv4 *and* IPv6)
+agentAddress udp:161,udp6:[::1]:161
+
+# system + hrSystem groups only
+view   systemonly  included   .1.3.6.1.2.1.1
+view   systemonly  included   .1.3.6.1.2.1.25.1
+
+# Full access from the local host
+rocommunity public  localhost
+rwcommunity public  localhost
+rocommunity public  default    -V systemonly
+rwcommunity public  default    -V systemonly
+rocommunity6 public  default   -V systemonly
+rwcommunity6 public  default   -V systemonly
+
+# Full read-only access for SNMPv3
+rouser   authOnlyUser
+
+# Note that setting these values here, results in the corresponding MIB objects being 'read-only'
+# See snmpd.conf(5) for more details
+sysLocation    ocsinventory
+sysContact     Robson Vaamonde
+sysServices    79
+
+# Process Monitoring
+# At least one  'mountd' process
+proc  mountd
+proc  ntalkd    4
+proc  sendmail 10 1
+
+# Disk Monitoring
+# 10MBs required on root disk, 5% free on /var, 10% free on all other disks
+disk       /     10000
+disk       /var  5%
+includeAllDisks  10%
+
+# System Load
+# Unacceptable 1-, 5-, and 15-minute load averages
+load   12 10 5
+
+# send SNMPv1 SNMPv2c traps
+trapsink     localhost public
+trap2sink    localhost public
+informsink   localhost public
+
+# Event MIB - automatically generate alerts
+# Remember to activate the 'createUser' lines above
+iquerySecName   internalUser       
+rouser          internalUser
+defaultMonitors          yes
+linkUpDownNotifications  yes
+
+# Arbitrary extension commands
+extend    test1   /bin/echo  Hello, world!
+extend-sh test2   echo Hello, world! ; echo Hi there ; exit 35
+extend-sh test3   /bin/sh /tmp/shtest
+
+# AgentX Sub-agents
+# Run as an AgentX master agent
+master          agentx
